# ts_query_ls

./: .gitattributes  .gitignore  Cargo.toml  README.md  Tre  rustfmt.toml
.github/workflows/: ci.yml  release.yml
client/vscode/: package-lock.json  package.json
client/vscode/src/: extension.ts
docs/: alternation.md  anchor.md  error.md  format-ignore.md  inherits.md  missing.md  negation.md  quantifier.md  wildcard.md
editors/code/: package-lock.json  package.json
editors/code/src/: extension.ts
editors/code/tree-sitter-c/queries/: highlights.scm
queries/formatting_test_files/: after_complex.scm  after_missing.scm  after_predicates.scm  after_trailing_whitespace.scm  before_complex.scm  before_missing.scm  before_predicates.scm
queries/query/: diagnostics.scm  formatting.scm  hover.scm
queries/test_workspace/queries/cpp/: test.scm
queries/test_workspace/queries/other/: test.scm
schemas/: config.json
src/: lib.rs  logging.rs  main.rs  test.rs  test_helpers.rs  util.rs
src/cli/: check.rs  format.rs  lint.rs  mod.rs  profile.rs
src/handlers/: code_action.rs  completion.rs  diagnostic.rs  did_change.rs  did_change_configuration.rs  did_close.rs  did_open.rs  did_save.rs  document_highlight.rs  document_symbol.rs  execute_command.rs  formatting.rs  goto_definition.rs  hover.rs  initialize.rs  mod.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  semantic_tokens_full.rs  shutdown.rs  workspace_symbol.rs
tests/: check.rs  format.rs  lint.rs
tests/fixtures/example_test_files/: complex.scm  simple.scm
tests/fixtures/formatting_test_files/: after_missing.scm  before_missing.scm  before_syntax_error.scm  before_trailing_whitespace.scm
tests/fixtures/test_workspace/queries/cpp/: folds.scm  test.scm
tests/fixtures/test_workspace/queries/other/: highlights.scm
xtask/: Cargo.toml
xtask/src/: main.rs
