[package]
name = "ts_query_ls"
version = "2.0.0"
authors = ["Riley Bruins <ribru17@gmail.com>"]
edition = "2024"
description = "An LSP implementation for Tree-sitter's query files"
license = "MIT"
repository = "https://github.com/ribru17/ts_query_ls"

[workspace]
members = [
    ".",
    "xtask",
]

[lib]
path = "src/lib.rs"

# Only include schemars in the schema generation xtask, so as to reduce binary
# size
[features]
schema = ["schemars"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
dashmap = "6.1.0"
dissimilar = "1.0.9"
libloading = "0.8.5"
rayon = "1.10.0"
regex = "1.11.0"
ropey = "1.6.1"
schemars = { version = "0.8.22", optional = true, features = ["derive"] }
serde = "1.0.210"
serde_json = "1.0.132"
streaming-iterator = "0.1.9"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.20.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
tree-sitter = { version = "0.25.3", features = ["std", "wasm"] }
tree-sitter-query = { git = "https://github.com/tree-sitter-grammars/tree-sitter-query", version = "0.5.1" }
walkdir = "2.5.0"

[build-dependencies]
cc = "1.1.30"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.23.0"
tower = { version = "0.5.1", features = ["util"] }
