[package]
name = "ts_query_ls"
version = "3.13.0"
authors = ["Riley Bruins <ribru17@gmail.com>"]
edition = "2024"
description = "An LSP implementation for Tree-sitter's query files"
license = "MIT"
repository = "https://github.com/ribru17/ts_query_ls"

[workspace]
members = [".", "xtask"]

[lints]
workspace = true

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

cargo_common_metadata = "allow"
cast_precision_loss = "allow"
cast-possible-truncation = "allow"
cast_lossless = "allow"
cast_sign_loss = "allow"
cognitive_complexity = "allow"
items_after_statements = "allow"
multiple_crate_versions = "allow"
option_if_let_else = "allow"
redundant_closure_for_method_calls = "allow"
too_many_lines = "allow"
significant_drop_tightening = "allow"

[lib]
path = "src/lib.rs"

# Only include schemars in the schema generation xtask, so as to reduce binary
# size
[features]
schema = ["schemars"]

[dependencies]
anstyle = "1.0.11"
clap = { version = "4.5.31", features = ["derive"] }
dashmap = "6.1.0"
diffy = "0.4.2"
dissimilar = "1.0.9"
futures = "0.3.31"
ignore = "0.4.23"
libloading = "0.9.0"
regex = "1.11.0"
ropey = "1.6.1"
schemars = { version = "0.8.22", optional = true, features = ["derive"] }
serde = "1.0.210"
serde_json = "1.0.132"
streaming-iterator = "0.1.9"
tokio = { version = "1.40.0", features = [
    "rt-multi-thread",
    "macros",
    "io-std",
] }
tower-lsp = "0.20.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
tree-sitter = { version = "0.25.10", features = ["std", "wasm"] }
tree-sitter-tsquery = "0.8.0"
uuid = { version = "1.17.0", features = ["v4"], default-features = false }

[build-dependencies]
cc = "1.1.30"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
tower = { version = "0.5.1", features = ["util"] }
tree-sitter-rust = "0.24.0"
